Добавил ApiProperty для ответов на ручки
