# src/auth/dto/login-response.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LoginResponse {
+  @ApiProperty({
+    type: String,
+    description: 'Сообщение о результате операции',
+  })
+  message: string;
+}
