# src/permission/dto/permission-response.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty, PickType } from '@nestjs/swagger';
+import { RoleResponseWithId } from 'src/role/dto/role-response.dto';
+import { Permission } from '../entities/permission.entity';
+
+export class PermissionResponse extends PickType(Permission, ['id', 'name'] as const) {
+    @ApiProperty({
+        type: [RoleResponseWithId],
+        description: 'Роли, связанные с этим разрешением',
+    })
+    roles: RoleResponseWithId[];
+}
+
